[package]
name = "warp_proxy"
version = "0.1.0"
authors = ["Jake Swanson <jakswa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.1"
log = "0.4"
pretty_env_logger = "0.3"
serde = "1.0"
serde_derive = "1.0"
reqwest = "=0.9.17"
