[package]
name = "warp_proxy"
version = "0.1.0"
authors = ["Jake Swanson <jakswa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { version = "0.1", features = ["tls"] }
log = "0.4"
pretty_env_logger = "0.3"
reqwest = "=0.9.17"
bytes = "0.4.12"
